# pgorca

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTORS.md  DESIGN.md  Dockerfile.rocky9  LICENSE  META.json  NOTICE  README.md  TODO.md  pg_orca--1.0.sql  pg_orca.control  pg_orca.cpp  testing.md
.github/: FUNDING.yml
.github/workflows/: build.yml  package.yml  tpch.yml
compat/catalog/: gp_distribution_policy.h  pg_operator_oids.h
compat/cdb/: cdb_plan_nodes.h
compat/executor/: dyn_scan.c  dyn_scan.h
compat/utils/: cmp_type.c  cmp_type.h  compat_memset.h  convert_timevalue_to_scalar.c  convert_timevalue_to_scalar.h  ext_stats.c  flatten_join_alias_var.c  func_output_arg_types.c  func_output_arg_types.h  gpdbgucs.h  misc.c  misc.h  partitioned_numpages.c  partitioned_numpages.h  relation_keys.c  relation_keys.h  remove_redundant_results.cpp  remove_redundant_results.h  subselect_hashable.c  subselect_hashable.h  walkers.c
docker/: docker-entrypoint-rocky9.sh  pg_orca-bootstrap.sql
docs/: cte-share-scan-design.md  d2-rebind-fix-benchmark.md  hashjoin-dpe-design.md  hashjoin-dpe-status.md  q17-analysis.md  semi-index-nljoin-design.md  tpch-performance-comparison.md  tpch-plan-analysis.md
gpopt/: CGPOptimizer.cpp  gpdbwrappers.cpp
gpopt/config/: CConfigParamMapping.cpp
gpopt/translate/: CContextDXLToPlStmt.cpp  CMappingColIdVarPlStmt.cpp  CMappingVarColId.cpp  CPartPruneStepsBuilder.cpp  CQueryMutators.cpp  CTranslatorDXLToPlStmt.cpp  CTranslatorDXLToScalar.cpp  CTranslatorQueryToDXL.cpp  CTranslatorRelcacheToDXL.cpp  CTranslatorScalarToDXL.cpp  CTranslatorUtils.cpp
gpopt/utils/: CMemoryPoolPalloc.cpp  COptTasks.cpp
include/gpopt/: gpdbwrappers.h
include/gpopt/translate/: CContextDXLToPlStmt.h  CMappingVarColId.h  CPartPruneStepsBuilder.h  CTranslatorDXLToPlStmt.h  CTranslatorQueryToDXL.h  CTranslatorRelcacheToDXL.h  CTranslatorScalarToDXL.h  CTranslatorUtils.h
include/gpopt/utils/: COptTasks.h  gpdbdefs.h
libgpdbcost/include/gpdbcost/: CCostModelPG.h  CCostModelParamsGPDB.h  CCostModelParamsPG.h
libgpdbcost/src/: CCostModelGPDB.cpp  CCostModelPG.cpp  CCostModelParamsGPDB.cpp  CCostModelParamsPG.cpp
libgpopt/src/base/: CColRef.cpp  CDatumSortedSet.cpp  CDrvdPropPlan.cpp  CUtils.cpp  CWindowOids.cpp
libgpopt/src/engine/: CEngine.cpp  CPartialPlan.cpp
libgpopt/src/hints/: CJoinTypeHint.cpp
libgpopt/src/operators/: CExpressionPreprocessor.cpp  CLogical.cpp  CLogicalApply.cpp  CLogicalDynamicGet.cpp  CLogicalDynamicGetBase.cpp  CLogicalIndexApply.cpp  CLogicalIndexGet.cpp  CLogicalInnerApply.cpp  CLogicalInnerJoin.cpp  CLogicalJoin.cpp  CLogicalLeftAntiSemiJoin.cpp  CLogicalLeftOuterApply.cpp  CLogicalLeftSemiApply.cpp  CLogicalLeftSemiCorrelatedApplyIn.cpp  CLogicalLeftSemiJoin.cpp  CLogicalTVF.cpp  CNormalizer.cpp  CPhysicalAppendTableScan.cpp  CPhysicalCTEConsumer.cpp  CPhysicalDynamicTableScan.cpp  CPhysicalFullMergeJoin.cpp  CPhysicalHashJoin.cpp  CPhysicalInnerMergeJoin.cpp  CPhysicalInnerNLJoin.cpp  CPhysicalLeftAntiSemiIndexNLJoin.cpp  CPhysicalLeftSemiIndexNLJoin.cpp  CPhysicalPartitionSelector.cpp  CScalarWindowFunc.cpp
libgpopt/src/optimizer/: COptimizer.cpp  (+1 more)
libgpos/src/: utils.cpp
packaging/: CPackConfig.cmake  build-packages.sh
pg_orca_rs/: BUILD_AND_TEST.md  Cargo.toml  Makefile  PLAN.md  PLAN_COST_MODEL.md  PLAN_LLM_INTEGRATION.md  PLAN_PROPERTY_FRAMEWORK.md  PLAN_TASK_SCHEDULER.md  TODO_COST_MODEL.md
pg_orca_rs/optimizer_core/: Cargo.toml
pg_orca_rs/pg_bridge/: Cargo.toml  pg_bridge.control
pg_orca_rs/pg_bridge/sql/: pg_bridge--0.1.0.sql
pg_orca_rs/pg_bridge/src/: lib.rs
pg_orca_rs/pg_bridge/src/catalog/: mod.rs
pg_orca_rs/pg_bridge/src/inbound/: column_mapping.rs  from_expr.rs  mod.rs  query_check.rs  scalar_convert.rs
pg_orca_rs/pg_bridge/src/outbound/: expr_builders.rs  mod.rs  plan_builders.rs  planned_stmt.rs  sanity_check.rs
pg_orca_rs/pg_bridge/src/utils/: mod.rs  palloc.rs  pg_list.rs
pg_orca_rs/pg_bridge/test/expected/: base.out  parallel.out
pg_orca_rs/pg_bridge/test/sql/: base.sql  parallel.sql
pg_orca_rs/pg_bridge/tests/: integration.rs
results/tpch/: schema.sql
src/: CGPOptimizer.cpp  gpdbwrappers.cpp  pg_orca.cpp  pg_orca_hooks.cpp
src/translate/: CContextDXLToPlStmt.cpp  CTranslatorDXLToPlStmt.cpp  CTranslatorDXLToScalar.cpp  CTranslatorRelcacheToDXL.cpp
src/utils/: COptTasks.cpp
test/: atmsort.pm  cost_align.sh  cost_align_noidx.sh  diff_no_plan.sh  gpdiff.pl  init_file  parallel_schedule  regression.conf  schedule  test.sh
test/bench/: tpcds_bench.sh  tpch_bench.sh
test/expected/: base.out  dpe.out  lateral.out  pg_lateral.out  query_correlated_subquery.out  query_cte.out  query_indexscan.out  query_partition_list.out  query_partition_mpp25707.out  query_partition_pruning.out  query_partition_static.out  query_subquery.out  tpch.out  tpch_pg.out
test/orca_align/: base.sql  dpe.sql  query_aggfunc.sql  query_correlated_subquery.sql  query_cursors.sql  query_indexscan.sql  query_partition_list.sql  query_partition_mpp25707.sql  query_partition_pruning.sql  query_partition_static.sql  query_regexp.sql  query_subquery.sql  query_uniontypes.sql  query_window.sql  run.sh
test/regress_align/: aggregates.sql  alter_table.sql  brin_multi.sql  btree_index.sql  create_index.sql  create_view.sql  equivclass.sql  expressions.sql  generated_stored.sql  generated_virtual.sql  gin.sql  groupingsets.sql  horology.sql  incremental_sort.sql  inet.sql  inherit.sql  insert_conflict.sql  join.sql  join_hash.sql  jsonb.sql  limit.sql  matview.sql  memoize.sql  merge.sql  misc_functions.sql  partition_aggregate.sql  partition_join.sql  partition_prune.sql  plancache.sql  plpgsql.sql  portals.sql  predicate.sql  privileges.sql  rangefuncs.sql  rangetypes.sql  returning.sql  rowtypes.sql  run.sh  select.sql  select_distinct.sql  (+21 more)
test/sql/: base.sql  cost_align.sql  dpe.sql  lateral.sql  pg_lateral.sql  query_correlated_subquery.sql  query_cte.sql  query_partition_list.sql  query_subquery.sql  tpch.sql  tpch_pg.sql
tools/: orca_dxl.cpp
tools/gporca_test/: pg_cost_stubs.cpp
(+150 files in other folders)
