[package]
name = "pg_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg17"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = { git = "https://github.com/pgcentralfoundation/pgrx.git", branch = "develop" }
optimizer_core = { path = "../optimizer_core" }

[dev-dependencies]
pgrx-tests = { git = "https://github.com/pgcentralfoundation/pgrx.git", branch = "develop" }
postgres = "0.19"
libc = "0.2"
